# dllb

./: .dllb_history  .gitignore  Cargo.toml  PLAN.md  README.md  start_cli.sh  start_dev.sh
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  render.rs
crates/code-intel/: Cargo.toml
crates/code-intel/src/: diff.rs  extract.rs  ingest.rs  lib.rs  meta_ast.rs  query_helpers.rs  schemas.rs  similarity.rs  tokenizer.rs
crates/code-intel/tests/: code_intel_test.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  record_id.rs  schema.rs  value.rs
crates/document/: Cargo.toml
crates/document/benches/: document.rs
crates/document/src/: collection.rs  document.rs  index.rs  lib.rs  serde.rs  validate.rs
crates/document/tests/: collection_test.rs
crates/graph/: Cargo.toml
crates/graph/benches/: graph.rs
crates/graph/src/: centrality.rs  community.rs  components.rs  edge.rs  lib.rs  pagerank.rs  path.rs  store.rs  traverse.rs
crates/graph/tests/: community_test.rs  graph_test.rs
crates/query/: Cargo.toml
crates/query/src/: ast.rs  cache.rs  executor.rs  format.rs  lib.rs  parser.rs  search.rs  tokenizer.rs
crates/query/tests/: query_test.rs
crates/search/: Cargo.toml
crates/search/benches/: search.rs
crates/search/src/: analyzer.rs  fts_index.rs  lib.rs  manager.rs
crates/search/tests/: search_test.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/storage/: Cargo.toml
crates/storage/benches/: storage.rs
crates/storage/src/: actor.rs  backend.rs  db.rs  key.rs  kv.rs  lib.rs
crates/storage/tests/: backend_test.rs  concurrent_test.rs  e2e_test.rs  recovery_test.rs
crates/transaction/: Cargo.toml
crates/transaction/src/: lib.rs
crates/vector/: Cargo.toml
crates/vector/benches/: vector.rs
crates/vector/src/: brute_force.rs  distance.rs  hnsw.rs  lib.rs
crates/vector/tests/: vector_test.rs
dllb_dev.redb.search/fts/ast_node.docstring/: meta.json
dllb_dev.redb.search/fts/ast_node.source_text/: meta.json
docs/: architecture.md  code-intel.md  crates.md  documents.md  graphs.md  query.md  search.md  server.md  storage.md  testing.md  vectors.md
