[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/transaction",
    "crates/document",
    "crates/graph",
    "crates/search",
    "crates/vector",
    "crates/code-intel",
    "crates/query",
    "crates/server",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Aleksei Matiushkin <am@mudasobwa.ru>"]
description = "dllb -- a multi-model NoSQL DBMS with native graphs, documents, full-text search, and vector embeddings"

[workspace.dependencies]
# Internal crates
dllb-core = { path = "crates/core" }
dllb-storage = { path = "crates/storage" }
dllb-transaction = { path = "crates/transaction" }
dllb-document = { path = "crates/document" }
dllb-graph = { path = "crates/graph" }
dllb-search = { path = "crates/search" }
dllb-vector = { path = "crates/vector" }
dllb-code-intel = { path = "crates/code-intel" }
dllb-query = { path = "crates/query" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Storage
redb = "4"

# Full-text search
tantivy = "0.26"

# Actor system
joerl = { path = "../../Rust/joerl/joerl", features = ["telemetry"] }
async-trait = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
crc32fast = "1"
crossbeam = "0.8"
rayon = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
half = { version = "2", features = ["serde"] }
rustyline = "15"
