[package]
name = "dllb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive REPL client for dllb"

[dependencies]
dllb-core = { workspace = true }
dllb-query = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
