[package]
name = "dllb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive REPL client for dllb"

[dependencies]
dllb-core = { workspace = true }
dllb-storage = { workspace = true }
dllb-query = { workspace = true }
serde_json = { workspace = true }
rustyline = { workspace = true }
marcli = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
