[package]
name = "dllb-code-intel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AST/MetaAST schemas, code-aware tokenizer, structural pattern matching"

[dependencies]
dllb-core = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
dllb-storage = { workspace = true }
dllb-document = { workspace = true }
dllb-graph = { workspace = true }
