[package]
name = "dllb-document"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Document model, CRUD operations, secondary indexes"

[dependencies]
dllb-core = { workspace = true }
dllb-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
