[package]
name = "dllb-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native graph model: edge storage, traversal engine"

[dependencies]
dllb-core = { workspace = true }
dllb-storage = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "graph"
harness = false
