[package]
name = "dllb-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tantivy integration for full-text search with BM25 scoring"

[dependencies]
dllb-core = { workspace = true }
tantivy = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
