[package]
name = "dllb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TCP/WebSocket server for dllb"

[dependencies]
dllb-core = { workspace = true }
dllb-storage = { workspace = true }
dllb-query = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
