[package]
name = "dllb-transaction"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MVCC transaction manager, conflict detection"

[dependencies]
dllb-core = { workspace = true }
dllb-storage = { workspace = true }
joerl = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
