[package]
name = "dllb-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HNSW vector index, distance metrics, VECTOR type, quantization"

[dependencies]
dllb-core = { workspace = true }
dllb-storage = { workspace = true }
joerl = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
half = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
