[package]
name = "dllb-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HNSW vector index, distance metrics, VECTOR type, quantization"

[dependencies]
dllb-core = { workspace = true }
rand = "0.9"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "vector"
harness = false
